tests/fails/types/borrowed_lifetimes.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nvim_types`
 --> tests/fails/types/borrowed_lifetimes.rs:3:5
  |
3 | use nvim_types::{array::Array, borrowed::Borrowed};
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `nvim_types`
  |
help: there is a crate or module with a similar name
  |
3 - use nvim_types::{array::Array, borrowed::Borrowed};
3 + use nvim_test::{array::Array, borrowed::Borrowed};
  |
